# wotblitz-cluster-banned

./: .gitignore  README.md  README_EN.md  build.ps1  latest.json  package.json
docs/: index.html  sitemap.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/App/: App.tsx
src/App/components/: ClusterList.tsx  ClusterMenu.tsx  GamePoster.tsx  LoadingScreen.tsx  Navbar.tsx  SelectiveBlocking.tsx
src/App/components/modals/: AdminModal.tsx  BlockingAllConfirmModal.tsx  ClearConfirmModal.tsx  ConfirmModal.tsx  InfoModal.tsx  SettingsModal.tsx  index.ts
src/Styles/: primary.scss
src/data/: servers.json
src/hooks/: index.ts  useGameStatus.ts  useHosts.ts  useHostsActions.ts  usePing.ts  useSelections.ts  useSettings.ts
src/types/: cluster.ts  index.ts  ping.ts  selections.ts
src/utils/: config.ts  opener.ts  regionStorage.ts  settingsStorage.ts  tauriInvoke.ts
