[package]
name = "clusterbanned"
version = "0.1.3"
description = "A Tauri App"
authors = ["aysi"]
edition = "2021"

[lib]
name = "clusterbanned_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"

# Async utilities
tokio = { version = "1", features = ["full", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
winping = "0.10.0"
sysinfo = "0.29"
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-opener = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
